@@ -19,13 +19,15 @@
  * USA
  */
 
-package net.ccbluex.liquidbounce.mcef;
+package com.nebulaclient.mcef;
 
 import net.minecraft.util.Util;
-import okio.Okio;
 
-import java.util.Locale;
+import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStreamReader;
+import java.util.Locale;
+import java.util.Objects;
 
 public enum MCEFPlatform {
 
@@ -118,22 +120,24 @@ public enum MCEFPlatform {
     }
 
     private static String getWindowsBuildNumber() {
-        var cmdArray = new String[]{"powershell.exe", "-Command", "\"[System.Environment]::OSVersion.Version.Build\""};
-
-        Process process = null;
         try {
-            process = new ProcessBuilder(cmdArray).redirectErrorStream(true).start();
-            try (var source = Okio.buffer(Okio.source(process.getInputStream()))) {
-                String result = source.readUtf8().trim();
+            var cmdArray = new String[]{"cmd", "/c", "ver"};
+            var process = Runtime.getRuntime().exec(cmdArray);
 
-                int exitCode = process.waitFor();
-                if (exitCode != 0) {
-                    MCEF.INSTANCE.getLogger().error("PS system environment command exit code: {}", exitCode);
-                }
-
-                if (result.isEmpty()) {
-                    result = getWmicBuildNumber();
-                }
+            try (var reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
+                var result = reader.lines()
+                        .filter(line -> line.contains("[Version"))
+                        .map(line -> {
+                            try {
+                                return line.split("\\[Version ")[1].replace("]", "").split("\\.")[2];
+                            } catch (ArrayIndexOutOfBoundsException e) {
+                                MCEF.INSTANCE.getLogger().error("Failed to parse Windows version string: {}", line, e);
+                                return null;
+                            }
+                        })
+                        .filter(Objects::nonNull)
+                        .findFirst()
+                        .orElseGet(MCEFPlatform::getWmicBuildNumber);
 
                 process.waitFor(); // Wait for process to complete
                 return result;
@@ -141,43 +145,25 @@ public enum MCEFPlatform {
         } catch (IOException | InterruptedException e) {
             MCEF.INSTANCE.getLogger().error("Failed to execute command to get Windows build number", e);
             return null;
-        } finally {
-            if (process != null) {
-                process.destroy();
-            }
         }
     }
 
 
     private static String getWmicBuildNumber() {
-        var wmicCmdArray = new String[]{"wmic", "os", "get", "BuildNumber", "/value"};
-
-        Process process = null;
         try {
-            process = new ProcessBuilder(wmicCmdArray).redirectErrorStream(true).start();
-            try (var source = Okio.buffer(Okio.source(process.getInputStream()))) {
-                String result = source.readUtf8().trim();
+            var wmicCmdArray = new String[]{"wmic", "os", "get", "BuildNumber"};
+            var process = Runtime.getRuntime().exec(wmicCmdArray);
 
-                int exitCode = process.waitFor();
-                if (exitCode != 0) {
-                    MCEF.INSTANCE.getLogger().error("wmic command exit code: {}", exitCode);
-                }
-
-                if (result.isEmpty()) {
-                    result = null;
-                } else {
-                    result = result.substring("BuildNumber=".length());
-                }
-
-                return result;
+            try (var reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
+                return reader.lines()
+                        .skip(1) // Skip header line
+                        .filter(line -> !line.trim().isEmpty())
+                        .findFirst()
+                        .orElse(null);
             }
-        } catch (IOException | InterruptedException e) {
+        } catch (IOException e) {
             MCEF.INSTANCE.getLogger().error("Failed to execute wmic command", e);
             return null;
-        } finally {
-            if (process != null) {
-                process.destroy();
-            }
         }
     }
 
